Issue #13410: Fixed a bug in PyUnicode_Format where it failed to properly ignore errors from a __int__() method.

Patch based on the patch for issue #15516.